# ypkg

./: .gitignore  README.md  RELEASE.md  TESTING.md  compressdoc.sh  prepare_venv.sh  prepare_ypkg_test_venv.sh  pyproject.toml  requirements.txt  run_build_tests.sh  run_release_tests.sh  schema_fetch_licenses.sh  set_up_ypkg_test_venv.sh  setup.py  venv_test_harness_functions.bash  ybump  ypkg  ypkg-build  ypkg-gen-history  ypkg-install-deps  yupdate
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
data/: licenses.json  schema.json
data/macros/actions/: autotools.yaml  cargo.yaml  cmake.yaml  haskell.yaml  meson.yaml  misc.yaml  ninja.yaml  perl.yaml  pgo.yaml  python.yaml  qt-kde.yaml  ruby.yaml  waf.yaml
data/macros/arches/: base.yaml  x86_64.yaml
data/man/man1/: ypkg-build.1.html  ypkg-build.1.md  ypkg.1  ypkg.1.html  ypkg.1.md
data/schema/: licenses.json  schema.json
examples/: nano.yml
man/: package.yml.5  package.yml.5.html  package.yml.5.md  ypkg-build.1  ypkg-build.1.html  ypkg-build.1.md  ypkg-install-deps.1  ypkg-install-deps.1.html  ypkg-install-deps.1.md  ypkg.1  ypkg.1.html  ypkg.1.md
ypkg2/: __init__.py  build.py  compressdoc.py  dependencies.py  examine.py  history.py  macros.py  main.py  metadata.py  packages.py  parser.py  rc.yml  scripts.py  sources.py  step.py  stringglob.py  tuning.py  ui.py  util.py  yamlhelper.py  ypkgcontext.py  ypkgspec.py
ypkg2/cli/: build.py  bump.py  genhistory.py  installdeps.py  update.py  ypkg.py
ypkg2/tests/: __init__.py  test_parser.py
(+1 files in other folders)
